2004-03-05  Jesper Harder  <harder@ifa.au.dk>

	* sha1-el.el (sha1-maximum-internal-length): Doc fix.

	* nnmail.el (nnmail-split-fancy): do.

	* gnus-kill.el (gnus-kill, gnus-execute): do.

2004-03-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* gnus-sum.el (gnus-widget-reversible-match) 
	(gnus-widget-reversible-to-internal) 
	(gnus-widget-reversible-to-external): New functions.
	(gnus-widget-reversible): New widget.
	(gnus-article-sort-functions, gnus-thread-sort-functions): Use it.

2004-03-05  Kai Grossjohann  <kgrossjo@eu.uu.net>

	* gnus-sum.el (gnus-thread-sort-functions)
	(gnus-article-sort-functions): Document `(not F)' items.

2004-03-04  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-use-gmane-xref): new backend
	(spam-gmane-xref-spam-group): variable to control the name of the
	Gmane spam group
	(spam-blackhole-servers, spam-blackhole-good-server-regex)
	(spam-regex-headers-spam, spam-regex-headers-ham)
	(spam-regex-body-spam, spam-regex-body-ham): clarified docs
	(spam-list-of-checks): added spam-use-gmane-xref to list of
	backends and checks
	(spam-check-gmane-xref): function for spam-use-gmane-xref

	* gnus.el (spam-autodetect-methods): add spam-use-gmane-xref as
	an autodetect method

2004-03-04  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus-int.el (gnus-request-accept-article): Inform the agent that
	articles are being added to a group.
	(gnus-request-replace-article): Inform the agent that articles
	need to be uncached as the cached contents are no longer valid.
	
2004-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* binhex.el: Don't autoload executable-find.

	* canlock.el: Don't autoload mail-fetch-field.

	* dgnushack.el: Autoload c-mode for XEmacs.

	* gnus-ems.el: Don't autoload appt-select-lowest-window.

	* gnus-msg.el: Don't autoload news-reply-mode, news-setup,
	rmail-dont-reply-to and rmail-output.

	* gnus-score.el: Don't autoload ffap-string-at-point.

	* gnus-setup.el: Don't autoload sc-cite-original.
