@@ -1,3 +1,9 @@
+2004-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mail-source.el (mail-source-touch-pop): Doc fix.
+
+	* message.el (message-smtpmail-send-it): Doc fix.
+
 2004-03-05  Jesper Harder  <harder@ifa.au.dk>
 
 	* sha1-el.el (sha1-maximum-internal-length): Doc fix.
